# multi-agent-query-with-adaptive-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  request.json  requirements.txt
src/: logger.py  main.py
src/db/: doc_vectordb.py
src/db/fiass_index/: index.faiss  index.pkl
src/graphs/: graph_builder.py
src/llms/: llm.py
src/nodes/: node.py
src/states/: state.py
src/tools/: tool.py
src/ui/: app.js  index.html  styles.css
